更新 解像度によって無限ループ入るバグ修正

--- a/theme/love.css
+++ b/theme/love.css
@@ -83,6 +83,7 @@ a:hover {
   body{
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
+    overflow: hidden;
     position: fixed;
     top: 0;
     bottom: 0;
