--- a/theme/love.css
+++ b/theme/love.css
@@ -1,97 +1,85 @@
-* {
-    box-sizing: border-box;
-}
-
-h1 {
-    font-family: arial;
-    color: rgb( 11, 86, 117 );
-}
+* { box-sizing: border-box; }
 
 body {
-    /*background-image: url(bg.png);*/
-    background-repeat: no-repeat;
-    font-family: arial;
     margin: 0;
-    padding: none;
-    background-color: rgb(12, 18, 22);
-    color: rgb(25, 109, 88);
-    height: 100vh;
-}
-header {
-    font-family: arial;
-    font-size: 12px;
-    /* padding-left: 10px; */
-    /* position:absolute; */
-    position: sticky;
-    top: 0;
-    width: 100%;
-    height: 40px;
-    z-index: 999;
-}
-main {
-    width: 100%;
-    height: 40px;
-    flex: auto;
-    /*position: relative;*//*②相対位置*/
-}
-footer {
-    font-family: arial;
-    font-size: 12px;
-    padding-left: 10px;
-    /*position:absolute;*/
-    bottom: 0;
-    width: 100%;
-    height: 40px;
-    z-index: 999;
-    margin-top: auto;
+    padding: 0;
+   	font-family: arial;
+    color: #ea316e;
+  	background-color: #ffffff;
 }
 
-/* Links */
 a {
     text-decoration: none;
+    color: #ea316e;
 }
-a:link {
-    color: rgb( 233, 73, 154 );
+a:link, a:visited, a:active {
+    color: #ea316e;
 }
-a:visited {
-    color: rgb( 110, 30, 71 );
-}
+
 a:hover {
-    color: rgb( 252, 207, 230 );
+	color: #25aae1;
+}
+          
+#container.love-desktop {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 
-/* the canvas *must not* have any border or padding, or mouse coords will be wrong */
-#canvas {
-    /*padding-right: 0;*/
-    display: block;
-    border: 0px none;
-    visibility: hidden;
-    z-index: 900;
-}
-
-.center {
-    margin-right: auto;
-    margin-left: auto;
-  }
-
-  html{
-    overflow: hidden;
-  }
-  html, body{
-    -webkit-text-size-adjust: 100%;  /* Safari対策 */
-  }
-  body{
-    overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
-    overflow: hidden;
+#container.love-mobile {
     position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
+    width: 100%;
+    height: 100%;
+}
 
-.fill_screen {
-height: 100vh; /* Fallback */
-height: calc(var(--vh, 1vh) * 100);
+#canvas {
+    border: 0px none;
+    display: block;
+    background-color: #f8f8f8;
+}
+
+/* .love-mobile #canvas { 
+    width: 100%;
+    height: 100%;
+} */
+
+#message-container {
+    width: 100%;
+	text-align:center;
+}
+
+#progress-border {
+  	border: 1px solid #ea316e;
+}
+  
+#progress-bar {
+	background-color: #ea316e;
+  	width: 10%;
+   	height: 16px;
+}
+
+#message-container > div {
+  	background-color:transparent;
+}
+
+#footer {
+	width:100%;
+    position: relative;
+}
+
+#footer > #fullscreen-button {
+    background-color: transparent;
+    border: 1px solid #ea316e;
+    padding: 5px 32px;
+    font-size: 16px;
+    margin: 4px 0;
+    cursor: pointer;
+  	float: right;
+}
+
+#footer > #logo {
+    float: left;
+    font-size: 16px;
+    margin: 4px 0;
 }
